Started remaking the UI. Please do not clone the github repository until finished.

--- a/horizon/index.html
+++ b/horizon/index.html
@@ -11,132 +11,252 @@
   <script src="https://unpkg.com/tippy.js@6"></script>
   <script src="https://cdn.jsdelivr.net/npm/showdown@2.1.0/dist/showdown.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/emoji-mart@latest/dist/browser.js"></script>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <style data-tag="reset-style-sheet">
+      html {  line-height: 1.15;}body {  margin: 0;}* {  box-sizing: border-box;  border-width: 0;  border-style: solid;}p,li,ul,pre,div,h1,h2,h3,h4,h5,h6,figure,blockquote,figcaption {  margin: 0;  padding: 0;}button {  background-color: transparent;}button,input,optgroup,select,textarea {  font-family: inherit;  font-size: 100%;  line-height: 1.15;  margin: 0;}button,select {  text-transform: none;}button,[type="button"],[type="reset"],[type="submit"] {  -webkit-appearance: button;}button::-moz-focus-inner,[type="button"]::-moz-focus-inner,[type="reset"]::-moz-focus-inner,[type="submit"]::-moz-focus-inner {  border-style: none;  padding: 0;}button:-moz-focus,[type="button"]:-moz-focus,[type="reset"]:-moz-focus,[type="submit"]:-moz-focus {  outline: 1px dotted ButtonText;}a {  color: inherit;  text-decoration: inherit;}input {  padding: 2px 4px;}img {  display: block;}html { scroll-behavior: smooth  }
+    </style>
+    <style data-tag="default-style-sheet">
+      html {
+        font-family: Inter;
+        font-size: 16px;
+      }
+
+      body {
+        font-weight: 400;
+        font-style:normal;
+        text-decoration: none;
+        text-transform: none;
+        letter-spacing: normal;
+        line-height: 1.15;
+        color: var(--dl-color-gray-black);
+        background-color: var(--dl-color-gray-white);
+
+      }
+    </style>
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&amp;display=swap"
+      data-tag="font"
+    />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&amp;display=swap"
+      data-tag="font"
+    />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&amp;display=swap"
+      data-tag="font"
+    />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&amp;display=swap"
+      data-tag="font"
+    />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&amp;display=swap"
+      data-tag="font"
+    />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&amp;display=swap"
+      data-tag="font"
+    />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&amp;display=swap"
+      data-tag="font"
+    />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&amp;display=swap"
+      data-tag="font"
+    />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&amp;display=swap"
+      data-tag="font"
+    />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&amp;display=swap"
+      data-tag="font"
+    />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&amp;display=swap"
+      data-tag="font"
+    />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&amp;display=swap"
+      data-tag="font"
+    />
 </head>
 
 <body>
-  <div class="app">
-    <div class="header">
-      <div class="logo">
-      </div>
-      <div class="user-settings">
-        <div class="dark-light">
-          <svg viewBox="0 0 24 24" stroke="currentColor" stroke-width="1.5" fill="none" stroke-linecap="round"
-            stroke-linejoin="round">
-            <path d="M21 12.79A9 9 0 1111.21 3 7 7 0 0021 12.79z" />
-          </svg>
+  <link rel="stylesheet" href="./style.css" />
+  <div>
+    <link href="./style.css" rel="stylesheet" />
+
+    <div class="main-container">
+      <div class="main-main">
+        <img
+          src="/img/vector8495-ewe.svg"
+          alt="Vector8495"
+          class="main-vector"
+        />
+        <img
+          src="/img/icdropdown8504-r4j5.svg"
+          alt="icdropdown8504"
+          class="main-icdropdown"
+        />
+        <span class="main-text"><span>Koru’s Secret Circle™</span></span>
+        <div class="main-frame1">
+          <div class="main-group4">
+            <img src="/img/vector3116-b3vr.svg" alt="Vector3116" />
+          </div>
+          <div class="main-group3">
+            <div class="main-userssolid1"></div>
+            <img src="/img/vector3105-vtsv.svg" alt="Vector3105" />
+          </div>
         </div>
-        <div class="settings">
-          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor"
-            stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
-            <circle cx="12" cy="12" r="3" />
-            <path
-              d="M19.4 15a1.65 1.65 0 00.33 1.82l.06.06a2 2 0 010 2.83 2 2 0 01-2.83 0l-.06-.06a1.65 1.65 0 00-1.82-.33 1.65 1.65 0 00-1 1.51V21a2 2 0 01-2 2 2 2 0 01-2-2v-.09A1.65 1.65 0 009 19.4a1.65 1.65 0 00-1.82.33l-.06.06a2 2 0 01-2.83 0 2 2 0 010-2.83l.06-.06a1.65 1.65 0 00.33-1.82 1.65 1.65 0 00-1.51-1H3a2 2 0 01-2-2 2 2 0 012-2h.09A1.65 1.65 0 004.6 9a1.65 1.65 0 00-.33-1.82l-.06-.06a2 2 0 010-2.83 2 2 0 012.83 0l.06.06a1.65 1.65 0 001.82.33H9a1.65 1.65 0 001-1.51V3a2 2 0 012-2 2 2 0 012 2v.09a1.65 1.65 0 001 1.51 1.65 1.65 0 001.82-.33l.06-.06a2 2 0 012.83 0 2 2 0 010 2.83l-.06.06a1.65 1.65 0 00-.33 1.82V9a1.65 1.65 0 001.51 1H21a2 2 0 012 2 2 2 0 01-2 2h-.09a1.65 1.65 0 00-1.51 1z" />
-          </svg>
+        <div class="main-frame2">
+          <div class="main-group41">
+            <img
+              src="https://images.unsplash.com/photo-1682686581740-2c5f76eb86d1?ixid=M3w5MTMyMXwxfDF8YWxsfDF8fHx8fHwyfHwxNjk5MDk3NjQ0fA&amp;ixlib=rb-4.0.3&amp;w=1500"
+              alt="Rectangle73116"
+              class="main-rectangle7"
+            />
+          </div>
+          <div class="main-group5">
+            <img
+              src="https://images.unsplash.com/photo-1699033475050-e6bf466d384e?ixid=M3w5MTMyMXwwfDF8YWxsfDEzfHx8fHx8Mnx8MTY5OTA5NzY0NHw&amp;ixlib=rb-4.0.3&amp;w=200"
+              alt="Rectangle73117"
+              class="main-rectangle71"
+            />
+          </div>
+          <div class="main-group6">
+            <img
+              src="https://images.unsplash.com/photo-1699033475050-e6bf466d384e?ixid=M3w5MTMyMXwwfDF8YWxsfDEzfHx8fHx8Mnx8MTY5OTA5NzY0NHw&amp;ixlib=rb-4.0.3&amp;w=200"
+              alt="Rectangle73118"
+              class="main-rectangle72"
+            />
+          </div>
+        </div>
+        <img
+          src="/img/line8514-yu4k.svg"
+          alt="Line8514"
+          class="main-line"
+        />
+        <img src="." alt="Line8513" class="main-line1" />
+        <img
+          src="/img/vector13116-66j7.svg"
+          alt="Vector13116"
+          class="main-vector1"
+        />
+        <img
+          src="https://images.unsplash.com/photo-1698929901707-ce2b943713f1?ixid=M3w5MTMyMXwwfDF8YWxsfDE1fHx8fHx8Mnx8MTY5OTA5NzY0NHw&amp;ixlib=rb-4.0.3&amp;w=200"
+          alt="Rectangle83116"
+          class="main-rectangle8"
+        />
+        <div class="main-group9">
+          <img
+            src="/img/icdropdown3308-8tll.svg"
+            alt="icdropdown3308"
+            class="main-icdropdown1"
+          />
+          <span class="main-text02"><span>INFORMATION</span></span>
+        </div>
+        <div class="main-group11">
+          <img
+            src="/img/icdropdown3331-fur8.svg"
+            alt="icdropdown3331"
+            class="main-icdropdown2"
+          />
+          <span class="main-text04">HANGOUT</span>
+        </div>
+        <div class="main-frame">
+          <div class="main-group7">
+            <div class="main-container1">
+              <div class="main-container2">
+                <img
+                  src="/img/rectangle53331-agqw.svg"
+                  alt="Rectangle53331"
+                  class="main-rectangle5"
+                />
+                <img
+                  src="/img/rectangle43331-v0ot.svg"
+                  alt="Rectangle43331"
+                  class="main-rectangle4"
+                />
+              </div>
+            </div>
+            <span class="main-text05">First Chat</span>
+          </div>
+          <div class="main-group71">
+            <div class="main-container3">
+              <div class="main-container4">
+                <img
+                  src="/img/rectangle53331-agqw.svg"
+                  alt="Rectangle53331"
+                  class="main-rectangle51"
+                />
+                <img
+                  src="/img/rectangle43331-v0ot.svg"
+                  alt="Rectangle43331"
+                  class="main-rectangle41"
+                />
+              </div>
+            </div>
+            <span class="main-text06">Second Chat</span>
+          </div>
+        </div>
+        <div class="main-frame7">
+          <div class="main-group8">
+            <div class="main-group13">
+              <div class="main-group12">
+                <img
+                  src="/img/vector33361-v62f.svg"
+                  alt="Vector33361"
+                  class="main-vector3"
+                />
+                <img
+                  src="/img/vector23361-68km.svg"
+                  alt="Vector23361"
+                  class="main-vector2"
+                />
+              </div>
+              <img
+                src="/img/ellipse13361-uksf.svg"
+                alt="Ellipse13361"
+                class="main-ellipse1"
+              />
+            </div>
+            <span class="main-text07"><span>Announcements</span></span>
+          </div>
+          <div class="main-group72">
+            <div class="main-container5">
+              <div class="main-container6">
+                <img
+                  src="/img/rectangle53331-agqw.svg"
+                  alt="Rectangle53331"
+                  class="main-rectangle52"
+                />
+                <img
+                  src="/img/rectangle43331-v0ot.svg"
+                  alt="Rectangle43331"
+                  class="main-rectangle42"
+                />
+              </div>
+            </div>
+            <span class="main-text09">First Chat</span>
+          </div>
         </div>
       </div>
     </div>
-    <div class="wrapper">
-      <div class="conversation-area">
-        <button class="add"></button>
-        <div class="overlay"></div>
-      </div>
-      <div class="chat-area">
-        <div class="chat-area-header">
-          <div class="chat-area-title">Loading Circle...</div>
-          <div class="chat-area-group">
-          </div>
-        </div>
-        <div class="chat-area-main">
-        </div>
-        <form id="chat-area-footer">
-          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor"
-            stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" class="feather feather-paperclip">
-            <path
-              d="M21.44 11.05l-9.19 9.19a6 6 0 01-8.49-8.49l9.19-9.19a4 4 0 015.66 5.66l-9.2 9.19a2 2 0 01-2.83-2.83l8.49-8.48" />
-          </svg>
-          <input type="text" id="message-input" placeholder="Type something here..." />
-          <div id="emoji-selector">
-          </div>
-          <svg id="show-emoji-selector" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor"
-            stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" class="feather feather-smile">
-            <circle cx="12" cy="12" r="10" />
-            <path d="M8 14s1.5 2 4 2 4-2 4-2M9 9h.01M15 9h.01" />
-          </svg>
-          <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
-            stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"
-            class="feather feather-send" id="sendbtn">
-            <line x1="22" y1="2" x2="11" y2="13" />
-            <polygon points="22 2 15 22 11 13 2 9 22 2" />
-          </svg>
-        </form>
-      </div>
-      <div class="detail-area">
-        <div class="detail-area-header">
-          <div class="msg-profile group">
-            <img class="circle-image"
-              src="https://api.dicebear.com/6.x/initials/svg?seed=?&scale=80&backgroundType=gradientLinear&backgroundColor=808080&fontWeight=400&radius=50"
-              alt="" />
-          </div>
-          <div class="detail-title">Loading Circle...</div>
-          <div class="detail-subtitle">Loading Circle description...</div>
-          <div class="detail-buttons">
-            <button class="detail-button" id="invite-users">
-              <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
-                stroke="currentColor" stroke-width="3" stroke-linecap="round" stroke-linejoin="round"
-                class="feather feather-user-plus">
-                <path d="M16 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2" />
-                <circle cx="8.5" cy="7" r="4" />
-                <line x1="20" y1="8" x2="20" y2="14" />
-                <line x1="23" y1="11" x2="17" y2="11" />
-              </svg>
-            </button>
-            <button class="detail-button" id="circle-search">
-              <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
-                stroke="currentColor" stroke-width="3" stroke-linecap="round" stroke-linejoin="round"
-                class="feather feather-search">
-                <circle cx="11" cy="11" r="8" />
-                <line x1="21" y1="21" x2="16.65" y2="16.65" />
-              </svg>
-            </button>
-            <button class="detail-button" id="circle-notifications">
-              <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
-                stroke="currentColor" stroke-width="3" stroke-linecap="round" stroke-linejoin="round"
-                class="feather feather-bell">
-                <path d="M18 8A6 6 0 0 0 6 8c0 7-3 9-3 9h18s-3-2-3-9" />
-                <path d="M13.73 21a2 2 0 0 1-3.46 0" />
-              </svg>
-            </button>
-            <button class="detail-button" id="circle-settings">
-              <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
-                stroke="currentColor" stroke-width="3" stroke-linecap="round" stroke-linejoin="round"
-                class="feather feather-settings">
-                <circle cx="12" cy="12" r="3" />
-                <path
-                  d="M19.4 15a1.65 1.65 0 0 0 .33 1.82l.06.06a2 2 0 0 1 0 2.83 2 2 0 0 1-2.83 0l-.06-.06a1.65 1.65 0 0 0-1.82-.33 1.65 1.65 0 0 0-1 1.51V21a2 2 0 0 1-2 2 2 2 0 0 1-2-2v-.09A1.65 1.65 0 0 0 9 19.4a1.65 1.65 0 0 0-1.82.33l-.06.06a2 2 0 0 1-2.83 0 2 2 0 0 1 0-2.83l.06-.06a1.65 1.65 0 0 0 .33-1.82 1.65 1.65 0 0 0-1.51-1H3a2 2 0 0 1-2-2 2 2 0 0 1 2-2h.09A1.65 1.65 0 0 0 4.6 9a1.65 1.65 0 0 0-.33-1.82l-.06-.06a2 2 0 0 1 0-2.83 2 2 0 0 1 2.83 0l.06.06a1.65 1.65 0 0 0 1.82.33H9a1.65 1.65 0 0 0 1-1.51V3a2 2 0 0 1 2-2 2 2 0 0 1 2 2v.09a1.65 1.65 0 0 0 1 1.51 1.65 1.65 0 0 0 1.82-.33l.06-.06a2 2 0 0 1 2.83 0 2 2 0 0 1 0 2.83l-.06.06a1.65 1.65 0 0 0-.33 1.82V9a1.65 1.65 0 0 0 1.51 1H21a2 2 0 0 1 2 2 2 2 0 0 1-2 2h-.09a1.65 1.65 0 0 0-1.51 1z" />
-              </svg>
-            </button>
-          </div>
-        </div>
-        <div class="detail-changes">
-          <div class="detail-change">
-            Members
-            <button class="members-minimize">
-              <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
-                stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
-                class="feather feather-chevron-up">
-                <polyline points="18 15 12 9 6 15" />
-              </svg>
-            </button>
-          </div>
-        </div>
-      </div>
-      <div class="search-popup">
-        <input class="search-noresults" id="searchbar" type="text" placeholder="Search">
-        <div id="searchresults">
-        </div>
-      </div>
-      <script type="module" src="./script.js"></script>
-
+  </div>
 </body>
 
 </html>
